chatapp-2 - chatapp : fix the layout issues in the chat room layout

--- a/frontend/src/components/Room/Room.scss
+++ b/frontend/src/components/Room/Room.scss
@@ -10,5 +10,4 @@
 
 .chat_log__flex{
   height: 67%;
-  overflow: scroll;
 }
