--- a/frontend/src/styles/_constants.scss
+++ b/frontend/src/styles/_constants.scss
@@ -1,3 +1,3 @@
-$primary: #8142ff;
-$info: #F7F7F7;
-$room-color: #3050ED;
+$primary: #FFFFFF;
+$info: #0052CC  ;
+$room-color: #FFA726  ;
